fix font size for button, was too small

--- a/excelsior/scss/excelsior/components/_navigation.scss
+++ b/excelsior/scss/excelsior/components/_navigation.scss
@@ -488,7 +488,8 @@
 
     input[type="submit"] {
       height: 23px;
-      line-height: 2em;
+      font-size:1.2em;
+      line-height: 1.7em;
       margin-top: 1px;
     }
 
